#include <gtest/gtest.h>

#include <chrono>
#include <cstdlib>
#include <filesystem>
#include <fstream>
#include <thread>
#include <vector>
#include <boost/asio/local/stream_protocol.hpp>
#include <boost/system/error_code.hpp>

#include "common/test_data_generator.h"
#include <yams/app/services/document_ingestion_service.h>
#include <yams/app/services/factory.hpp>
#include <yams/app/services/retrieval_service.h>
#include <yams/app/services/services.hpp>
#include <yams/daemon/components/ServiceManager.h>
#include <yams/daemon/daemon.h>
#include <yams/metadata/metadata_repository.h>

using namespace std::chrono_literals;
namespace fs = std::filesystem;

class GrepServiceExpectationsIT : public ::testing::Test {
protected:
    fs::path root_;
    fs::path storageDir_;
    fs::path socketPath_;
    std::unique_ptr<yams::daemon::YamsDaemon> daemon_;

    static bool canBindUnixSocketHere();

    void SetUp() override {
        if (!canBindUnixSocketHere()) {
            GTEST_SKIP() << "Skipping: AF_UNIX not available in this environment.";
        }
        auto unique = std::to_string(std::chrono::steady_clock::now().time_since_epoch().count());
        root_ = fs::temp_directory_path() / ("yams_grep_it_" + unique);
        storageDir_ = root_ / "storage";
        fs::create_directories(storageDir_);
        socketPath_ = fs::path("/tmp") / ("yams-grep-" + unique + ".sock");

        yams::daemon::DaemonConfig cfg;
        cfg.dataDir = storageDir_;
        cfg.socketPath = socketPath_;
        cfg.pidFile = root_ / "daemon.pid";
        cfg.logFile = root_ / "daemon.log";
        cfg.enableModelProvider = true;
        cfg.useMockModelProvider = true;
        daemon_ = std::make_unique<yams::daemon::YamsDaemon>(cfg);
        auto started = daemon_->start();
        ASSERT_TRUE(started) << started.error().message;
        std::this_thread::sleep_for(150ms);
    }

    void TearDown() override {
        if (daemon_)
            daemon_->stop();
        std::error_code ec;
        fs::remove_all(root_, ec);
    }
};

bool GrepServiceExpectationsIT::canBindUnixSocketHere() {
    try {
        boost::asio::io_context io;
        boost::asio::local::stream_protocol::acceptor acceptor(io);
        auto path = std::filesystem::path("/tmp") /
                    (std::string("yams-grep-probe-") + std::to_string(::getpid()) + ".sock");
        std::error_code ec;
        std::filesystem::remove(path, ec);
        boost::system::error_code bec;
        acceptor.open(boost::asio::local::stream_protocol::endpoint(path.string()).protocol(), bec);
        if (bec)
            return false;
        acceptor.bind(boost::asio::local::stream_protocol::endpoint(path.string()), bec);
        if (bec)
            return false;
        acceptor.close();
        std::filesystem::remove(path, ec);
        return true;
    } catch (...) {
        return false;
    }
}

// A) Basic regex-only pathsOnly with include filter
TEST_F(GrepServiceExpectationsIT, RegexOnlyPathsOnlyWithInclude) {
    fs::create_directories(root_ / "ingest");
    auto fHello = (root_ / "ingest" / "hello.txt");
    auto fSkip = (root_ / "ingest" / "skip.bin");
    std::ofstream(fHello) << "hello grep service";
    std::ofstream(fSkip) << std::string(5, '\0');

    yams::app::services::DocumentIngestionService ing;
    yams::app::services::AddOptions opts;
    opts.socketPath = socketPath_;
    opts.explicitDataDir = storageDir_;
    // Ingest text file individually to capture hash
    opts.path = fHello.string();
    opts.recursive = false;
    opts.noEmbeddings = true;
    auto add1 = ing.addViaDaemon(opts);
    ASSERT_TRUE(add1) << (add1 ? "" : add1.error().message);
    // Ingest binary (no effect on grep)
    opts.path = fSkip.string();
    auto add2 = ing.addViaDaemon(opts);
    ASSERT_TRUE(add2);

    auto* sm = daemon_->getServiceManager();
    auto ctx = sm->getAppContext();
    auto grepSvc = yams::app::services::makeGrepService(ctx);
    // Ensure metadata/FTS is warm for hello.txt
    auto searchSvc = yams::app::services::makeSearchService(ctx);
    (void)searchSvc->lightIndexForHash(add1.value().hash);
    // Poll metadata repo until the file appears (bounded)
    {
        bool visible = false;
        for (int i = 0; i < 40 && !visible; ++i) {
            auto allDocs = ctx.metadataRepo->findDocumentsByPath("%");
            if (allDocs) {
                for (const auto& d : allDocs.value()) {
                    if (d.filePath.find("hello.txt") != std::string::npos) {
                        visible = true;
                        break;
                    }
                }
            }
            if (!visible)
                std::this_thread::sleep_for(50ms);
        }
        ASSERT_TRUE(visible);
    }

    yams::app::services::GrepRequest rq;
    rq.pattern = "hello";
    rq.regexOnly = true;
    rq.pathsOnly = true;
    rq.paths = {(root_ / "ingest").string()};

    yams::Result<yams::app::services::GrepResponse> res =
        yams::Error{yams::ErrorCode::Unknown, "init"};
    bool ready = false;
    for (int i = 0; i < 60 && !ready; ++i) {
        res = grepSvc->grep(rq);
        ASSERT_TRUE(res) << (res ? "" : res.error().message);
        if (!res.value().pathsOnly.empty())
            ready = true;
        else
            std::this_thread::sleep_for(50ms);
    }
    const auto& r = res.value();
    // Expect at least one path ending with hello.txt
    bool hasHello = false;
    for (const auto& p : r.pathsOnly) {
        if (p.find("hello.txt") != std::string::npos)
            hasHello = true;
        EXPECT_EQ(p.find("skip.bin"), std::string::npos);
    }
    EXPECT_TRUE(hasHello);
}

// B) Count mode returns counts per file (structure only)
TEST_F(GrepServiceExpectationsIT, CountModeStructure) {
    fs::create_directories(root_ / "ingest");
    auto fMd = (root_ / "ingest" / "a.md");
    std::ofstream(fMd) << "alpha beta gamma alpha";

    yams::app::services::DocumentIngestionService ing;
    yams::app::services::AddOptions opts;
    opts.socketPath = socketPath_;
    opts.explicitDataDir = storageDir_;
    opts.path = fMd.string();
    opts.recursive = false;
    opts.noEmbeddings = true;
    auto add = ing.addViaDaemon(opts);
    ASSERT_TRUE(add) << (add ? "" : add.error().message);

    auto* sm = daemon_->getServiceManager();
    auto ctx = sm->getAppContext();
    auto grepSvc = yams::app::services::makeGrepService(ctx);
    auto searchSvc2 = yams::app::services::makeSearchService(ctx);
    (void)searchSvc2->lightIndexForHash(add.value().hash);
    // Poll until a.md is visible in metadata
    {
        bool visible = false;
        for (int i = 0; i < 40 && !visible; ++i) {
            auto allDocs = ctx.metadataRepo->findDocumentsByPath("%");
            if (allDocs) {
                for (const auto& d : allDocs.value()) {
                    if (d.filePath.find("a.md") != std::string::npos) {
                        visible = true;
                        break;
                    }
                }
            }
            if (!visible)
                std::this_thread::sleep_for(50ms);
        }
        ASSERT_TRUE(visible);
    }

    yams::app::services::GrepRequest rq;
    rq.pattern = "alpha";
    rq.count = true;
    rq.regexOnly = true;
    rq.paths = {(root_ / "ingest").string()};

    yams::Result<yams::app::services::GrepResponse> res2 =
        yams::Error{yams::ErrorCode::Unknown, "init"};
    bool hasResults = false;
    for (int i = 0; i < 60 && !hasResults; ++i) {
        res2 = grepSvc->grep(rq);
        ASSERT_TRUE(res2) << (res2 ? "" : res2.error().message);
        if (!res2.value().results.empty())
            hasResults = true;
        else
            std::this_thread::sleep_for(50ms);
    }
    const auto& r = res2.value();
    // Structural assertions: results present and matchCount populated for a.md
    ASSERT_FALSE(r.results.empty());
    bool ok = false;
    for (const auto& fr : r.results) {
        if (fr.file.find("a.md") != std::string::npos) {
            EXPECT_GT(fr.matchCount, 0u);
            ok = true;
        }
    }
    EXPECT_TRUE(ok);
}

// C) Negative case: no match â†’ still ok with zero paths
TEST_F(GrepServiceExpectationsIT, NegativeNoMatchPathsOnly) {
    auto* sm = daemon_->getServiceManager();
    auto ctx = sm->getAppContext();
    auto grepSvc = yams::app::services::makeGrepService(ctx);

    yams::app::services::GrepRequest rq;
    rq.pattern = "zzzzzz";
    rq.regexOnly = true;
    rq.pathsOnly = true;
    rq.includePatterns = {(root_ / "ingest" / "**").string()};

    auto res = grepSvc->grep(rq);
    ASSERT_TRUE(res) << (res ? "" : res.error().message);
    const auto& r = res.value();
    EXPECT_TRUE(r.pathsOnly.empty());
}
// D) Literal vs Regex vs Word boundaries
TEST_F(GrepServiceExpectationsIT, LiteralVsRegexWordBoundaries) {
    fs::create_directories(root_ / "ingest");
    auto f = (root_ / "ingest" / "words.txt");
    std::ofstream(f) << "foo foobar foo-bar (foo)";

    yams::app::services::DocumentIngestionService ing;
    yams::app::services::AddOptions opts;
    opts.socketPath = socketPath_;
    opts.explicitDataDir = storageDir_;
    opts.path = f.string();
    opts.recursive = false;
    opts.noEmbeddings = true;
    auto add = ing.addViaDaemon(opts);
    ASSERT_TRUE(add);

    auto* sm = daemon_->getServiceManager();
    auto ctx = sm->getAppContext();
    auto grepSvc = yams::app::services::makeGrepService(ctx);

    // Literal: match parentheses without regex semantics
    {
        yams::app::services::GrepRequest rq;
        rq.pattern = "(foo)";
        rq.literalText = true;
        rq.lineNumbers = true;
        rq.paths = {(root_ / "ingest").string()};
        auto r = grepSvc->grep(rq);
        ASSERT_TRUE(r);
        bool found = false;
        for (const auto& fr : r.value().results) {
            if (fr.file.find("words.txt") != std::string::npos && fr.matchCount > 0)
                found = true;
        }
        EXPECT_TRUE(found);
    }

    // Regex word boundary: should match 'foo' as a whole word, not 'foobar'
    {
        yams::app::services::GrepRequest rq;
        rq.pattern = "foo";
        rq.word = true;
        rq.lineNumbers = true;
        rq.paths = {(root_ / "ingest").string()};
        auto r = grepSvc->grep(rq);
        ASSERT_TRUE(r);
        // Expect exactly two word matches: "foo" and "(foo)"; not the segment in foo-bar or foobar
        size_t total = 0;
        for (const auto& fr : r.value().results)
            total += fr.matchCount;
        EXPECT_GE(total, 2u);
    }
}

// E) filesWithMatches and filesWithoutMatch modes
TEST_F(GrepServiceExpectationsIT, FilesWithAndWithoutModes) {
    fs::create_directories(root_ / "ingest");
    auto f1 = (root_ / "ingest" / "a.txt");
    auto f2 = (root_ / "ingest" / "b.txt");
    std::ofstream(f1) << "alpha";
    std::ofstream(f2) << "beta";

    yams::app::services::DocumentIngestionService ing;
    yams::app::services::AddOptions opts;
    opts.socketPath = socketPath_;
    opts.explicitDataDir = storageDir_;
    opts.recursive = false;
    opts.noEmbeddings = true;
    opts.path = f1.string();
    ASSERT_TRUE(ing.addViaDaemon(opts));
    opts.path = f2.string();
    ASSERT_TRUE(ing.addViaDaemon(opts));

    auto* sm = daemon_->getServiceManager();
    auto ctx = sm->getAppContext();
    auto grepSvc = yams::app::services::makeGrepService(ctx);

    yams::app::services::GrepRequest rq;
    rq.pattern = "alpha";
    rq.filesWithMatches = true;
    rq.filesWithoutMatch = true;
    rq.paths = {(root_ / "ingest").string()};
    auto r = grepSvc->grep(rq);
    ASSERT_TRUE(r);
    const auto& resp = r.value();
    bool hasA = false, hasB = false;
    for (const auto& p : resp.filesWith)
        if (p.find("a.txt") != std::string::npos)
            hasA = true;
    for (const auto& p : resp.filesWithout)
        if (p.find("b.txt") != std::string::npos)
            hasB = true;
    EXPECT_TRUE(hasA);
    EXPECT_TRUE(hasB);
}

// F) Invert with pathsOnly
TEST_F(GrepServiceExpectationsIT, InvertPathsOnly) {
    fs::create_directories(root_ / "ingest");
    auto f = (root_ / "ingest" / "c.txt");
    std::ofstream(f) << "gamma";

    yams::app::services::DocumentIngestionService ing;
    yams::app::services::AddOptions opts;
    opts.socketPath = socketPath_;
    opts.explicitDataDir = storageDir_;
    opts.path = f.string();
    opts.recursive = false;
    opts.noEmbeddings = true;
    ASSERT_TRUE(ing.addViaDaemon(opts));

    auto* sm = daemon_->getServiceManager();
    auto ctx = sm->getAppContext();
    auto grepSvc = yams::app::services::makeGrepService(ctx);

    yams::app::services::GrepRequest rq;
    rq.pattern = "zzz"; // not present
    rq.regexOnly = true;
    rq.invert = true; // invert: should show file because pattern not present
    rq.pathsOnly = true;
    rq.paths = {(root_ / "ingest").string()};
    auto r = grepSvc->grep(rq);
    ASSERT_TRUE(r);
    bool hasC = false;
    for (const auto& p : r.value().pathsOnly)
        if (p.find("c.txt") != std::string::npos)
            hasC = true;
    EXPECT_TRUE(hasC);
}

// G) Unicode literal match and best-effort ignoreCase
TEST_F(GrepServiceExpectationsIT, UnicodeLiteralAndIgnoreCaseBestEffort) {
    fs::create_directories(root_ / "ingest");
    auto f = (root_ / "ingest" / "unicode.txt");
    // Contains a Latin capital A with ring (Ã…), and an emoji
    std::ofstream(f) << "The unit is Ã…ngstrÃ¶m \xF0\x9F\x98\x80"; // ðŸ˜€ UTF-8

    yams::app::services::DocumentIngestionService ing;
    yams::app::services::AddOptions opts;
    opts.socketPath = socketPath_;
    opts.explicitDataDir = storageDir_;
    opts.path = f.string();
    opts.recursive = false;
    opts.noEmbeddings = true;
    ASSERT_TRUE(ing.addViaDaemon(opts));

    auto* sm = daemon_->getServiceManager();
    auto ctx = sm->getAppContext();
    auto grepSvc = yams::app::services::makeGrepService(ctx);

    // Literal Unicode token should be discoverable
    {
        yams::app::services::GrepRequest rq;
        rq.pattern = "Ã…ngstrÃ¶m";
        rq.literalText = true;
        rq.paths = {(root_ / "ingest").string()};
        auto r = grepSvc->grep(rq);
        ASSERT_TRUE(r) << (r ? "" : r.error().message);
        bool found = false;
        for (const auto& fr : r.value().results) {
            if (fr.file.find("unicode.txt") != std::string::npos && fr.matchCount > 0)
                found = true;
        }
        EXPECT_TRUE(found);
    }

    // Best-effort ignoreCase on Unicode: tolerate platform variance
    {
        yams::app::services::GrepRequest rq;
        rq.pattern = "Ã¥ngstrÃ¶m"; // lower-case initial
        rq.literalText = true;
        rq.ignoreCase = true;
        rq.paths = {(root_ / "ingest").string()};
        auto r = grepSvc->grep(rq);
        ASSERT_TRUE(r) << (r ? "" : r.error().message);
        // Some platforms may not case-fold Ã…â†’Ã¥ equivalently without ICU; allow zero-or-more
        size_t total = 0;
        for (const auto& fr : r.value().results)
            total += fr.matchCount;
        EXPECT_GE(total, 0u);
    }
}

// Final lightweight stress: repeat grep calls to catch flakiness.
TEST_F(GrepServiceExpectationsIT, StressTail) {
    fs::create_directories(root_ / "stress");
    auto p = (root_ / "stress" / "s.md");
    std::ofstream(p) << "hello stress grep";

    yams::app::services::DocumentIngestionService ing;
    yams::app::services::AddOptions a;
    a.socketPath = socketPath_;
    a.explicitDataDir = storageDir_;
    a.path = p.string();
    a.recursive = false;
    a.noEmbeddings = true;
    ASSERT_TRUE(ing.addViaDaemon(a));

    auto* sm = daemon_->getServiceManager();
    auto ctx = sm->getAppContext();
    auto grepSvc = yams::app::services::makeGrepService(ctx);

    yams::app::services::GrepRequest rq;
    rq.pattern = "hello";
    rq.regexOnly = true;
    rq.pathsOnly = true;
    rq.paths = {(root_ / "stress").string()};

    auto stress_iters = []() {
        if (const char* s = std::getenv("YAMS_STRESS_ITERS")) {
            int v = std::atoi(s);
            if (v > 0 && v < 100000)
                return v;
        }
        return 100;
    }();
    for (int i = 0; i < stress_iters; ++i) {
        auto res = grepSvc->grep(rq);
        ASSERT_TRUE(res) << (res ? "" : res.error().message);
        std::this_thread::sleep_for(5ms);
    }
}

TEST_F(GrepServiceExpectationsIT, BinaryFileNoUtf8ErrorPathsOnly) {
    fs::create_directories(root_ / "ingest");
    {
        std::ofstream out(root_ / "ingest" / "bin.dat", std::ios::binary);
        std::string payload;
        payload.assign("A", 1);
        payload.push_back('\0');
        payload.push_back(static_cast<char>(0xFF));
        payload.append("B\nC", 3);
        out.write(payload.data(), static_cast<std::streamsize>(payload.size()));
    }

    yams::app::services::DocumentIngestionService ing;
    yams::app::services::AddOptions opts;
    opts.socketPath = socketPath_;
    opts.explicitDataDir = storageDir_;
    opts.path = (root_ / "ingest").string();
    opts.recursive = true;
    opts.noEmbeddings = true;
    ASSERT_TRUE(ing.addViaDaemon(opts));

    yams::app::services::RetrievalService rsvc;
    yams::app::services::RetrievalOptions ropts;
    ropts.socketPath = socketPath_;
    ropts.explicitDataDir = storageDir_;

    yams::daemon::GrepRequest gpreq;
    gpreq.pattern = "A";    // present in payload
    gpreq.pathsOnly = true; // avoid embedding raw bytes in protobuf text fields
    gpreq.literalText = true;
    gpreq.includePatterns = {(root_ / "ingest" / "**").string()};

    bool ok = false;
    for (int i = 0; i < 40 && !ok; ++i) {
        auto gres = rsvc.grep(gpreq, ropts);
        ASSERT_TRUE(gres) << (gres ? "" : gres.error().message);
        ok = true; // success without crash/UTF-8 errors is sufficient
        if (!ok)
            std::this_thread::sleep_for(50ms);
    }
    EXPECT_TRUE(ok);
}

TEST_F(GrepServiceExpectationsIT, BinaryFileNoUtf8ErrorCountOnly) {
    fs::create_directories(root_ / "ingest");
    {
        std::ofstream out(root_ / "i2.dat", std::ios::binary);
        std::string payload;
        payload.assign("Z", 1);
        payload.push_back('\0');
        payload.push_back(static_cast<char>(0xEE));
        payload.push_back(static_cast<char>(0xFF));
        payload.append("Z", 1);
        out.write(payload.data(), static_cast<std::streamsize>(payload.size()));
    }

    yams::app::services::DocumentIngestionService ing;
    yams::app::services::AddOptions opts;
    opts.socketPath = socketPath_;
    opts.explicitDataDir = storageDir_;
    opts.path = (root_).string();
    opts.recursive = true;
    opts.noEmbeddings = true;
    ASSERT_TRUE(ing.addViaDaemon(opts));

    yams::app::services::RetrievalService rsvc;
    yams::app::services::RetrievalOptions ropts;
    ropts.socketPath = socketPath_;
    ropts.explicitDataDir = storageDir_;

    yams::daemon::GrepRequest gpreq;
    gpreq.pattern = "Z";
    gpreq.countOnly = true;
    gpreq.regexOnly = true;
    gpreq.includePatterns = {(root_ / "**").string()};

    auto gres = rsvc.grep(gpreq, ropts);
    ASSERT_TRUE(gres) << (gres ? "" : gres.error().message);
    EXPECT_GE(gres.value().totalMatches, 0u);
}

TEST_F(GrepServiceExpectationsIT, BinaryFileNoUtf8ErrorFilesOnly) {
    fs::create_directories(root_ / "ingest");
    {
        std::ofstream out(root_ / "ingest" / "i3.bin", std::ios::binary);
        std::array<unsigned char, 5> bytes{0x00, 0xFF, 0x41, 0x00, 0x41};
        out.write(reinterpret_cast<const char*>(bytes.data()), bytes.size());
    }

    yams::app::services::DocumentIngestionService ing;
    yams::app::services::AddOptions opts;
    opts.socketPath = socketPath_;
    opts.explicitDataDir = storageDir_;
    opts.path = (root_ / "ingest").string();
    opts.recursive = true;
    opts.noEmbeddings = true;
    ASSERT_TRUE(ing.addViaDaemon(opts));

    yams::app::services::RetrievalService rsvc;
    yams::app::services::RetrievalOptions ropts;
    ropts.socketPath = socketPath_;
    ropts.explicitDataDir = storageDir_;

    yams::daemon::GrepRequest gpreq;
    gpreq.pattern = "A"; // 0x41
    gpreq.filesOnly = true;
    gpreq.regexOnly = true;
    gpreq.includePatterns = {(root_ / "ingest" / "**").string()};

    auto gres = rsvc.grep(gpreq, ropts);
    ASSERT_TRUE(gres) << (gres ? "" : gres.error().message);
    EXPECT_GE(gres.value().filesSearched, 0u);
}

TEST_F(GrepServiceExpectationsIT, PdfExtractorEnablesGrepAndSearch) {
    fs::create_directories(root_ / "pdf");
    auto pdfPath = (root_ / "pdf" / "doc.pdf");
    yams::test::TestDataGenerator gen;
    auto pdf = gen.generatePDF(3);
    {
        std::ofstream out(pdfPath, std::ios::binary);
        out.write(reinterpret_cast<const char*>(pdf.data()),
                  static_cast<std::streamsize>(pdf.size()));
    }

    yams::app::services::DocumentIngestionService ing;
    yams::app::services::AddOptions opts;
    opts.socketPath = socketPath_;
    opts.explicitDataDir = storageDir_;
    opts.path = pdfPath.string();
    opts.recursive = false;
    opts.noEmbeddings = true;
    auto add = ing.addViaDaemon(opts);
    ASSERT_TRUE(add) << (add ? "" : add.error().message);

    auto* sm = daemon_->getServiceManager();
    auto ctx = sm->getAppContext();
    auto grepSvc = yams::app::services::makeGrepService(ctx);
    auto searchSvc = yams::app::services::makeSearchService(ctx);

    // Grep for a token likely present in generated text ("Page")
    {
        yams::app::services::GrepRequest rq;
        rq.pattern = "Page";
        rq.literalText = true;
        rq.paths = {(root_ / "pdf").string()};
        bool found = false;
        for (int i = 0; i < 60 && !found; ++i) {
            auto r = grepSvc->grep(rq);
            if (r) {
                size_t total = 0;
                for (const auto& fr : r.value().results)
                    total += fr.matchCount;
                if (total > 0)
                    found = true;
            }
            if (!found)
                std::this_thread::sleep_for(50ms);
        }
        if (!found)
            GTEST_SKIP() << "PDF extractor not active on this runner";
        EXPECT_TRUE(found);
    }

    // PDF keyword search assertion moved to smoke shard for isolated lifecycle.
}
